adding estimates to API
