# backend/pkg/apiserver/routes.go
@@ -60,6 +60,21 @@ type Estimate struct {
 	StandardDeviation float64 `json:"standarddeviation" example:"0.2" format:"float64"`
 }
 
+// PerUserEstimate represents a user and work package individual estimate
+type PerUserEstimate struct {
+	WorkPackageID  string  `json:"id" example:"TEST01" format:"string"`
+	UserName       string  `json:"user" example:"Tigger" format:"string"`
+	BestCase       float64 `json:"b" example:"1.5" format:"float64"`
+	MostLikelyCase float64 `json:"m" example:"2.0" format:"float64"`
+	WorstCase      float64 `json:"w" example:"3.6" format:"float64"`
+}
+
+// PerUserEstimateResponse represents the get estimates response
+type PerUserEstimateResponse struct {
+	Message   string               `json:"message" example:"ok" format:"string"`
+	Estimates []datastore.Estimate `json:"estimates" format:"[]datastore.Estimate"`
+}
+
 // Routes list of the available routes for project
 // @title Doker Backend API
 // @version 0.1.0
@@ -101,6 +116,11 @@ func Routes(app *fiber.App, store datastore.DataStore) {
 
 	addResetEstimateOfWorkPackageRoute(APIGroup, store)
 
+	addAddUserEstimateToSessionRoute(APIGroup, store)
+
+	addRemoveUserEstimateFromSessionRoute(APIGroup, store)
+
+	addGetUserEstimatesFromSessionRoute(APIGroup, store)
 }
 
 // Adding the documentation route
@@ -429,6 +449,118 @@ func addResetEstimateOfWorkPackageRoute(api fiber.Router, store datastore.DataSt
 
 		data := GeneralResponse{
 			Message: "ok",
+		}
+		return c.Status(200).JSON(data)
+	})
+}
+
+// Adding the Add user estimate to session route
+// @Summary Add the estimate of a user for a work package
+// @Description Adds a estimate of a existing user of a existing work package inside a existing session
+// @Tags estimate
+// @Produce  json
+// @Param token path string true "Session Token"
+// @Param  estimate body PerUserEstimate true "New Estimate"
+// @Success 200 {object} GeneralResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /sessions/{token}/estimates [post]
+func addAddUserEstimateToSessionRoute(api fiber.Router, store datastore.DataStore) {
+	api.Post("/sessions/:token/estimates", func(c *fiber.Ctx) error {
+		es := new(PerUserEstimate)
+
+		if err := c.BodyParser(es); err != nil {
+			data := ErrorResponse{
+				Message: "error",
+				Reason:  err.Error(),
+			}
+			return c.Status(400).JSON(data)
+		}
+
+		est := datastore.Estimate{
+			WorkPackageID:  es.WorkPackageID,
+			UserName:       es.UserName,
+			BestCase:       es.BestCase,
+			MostLikelyCase: es.MostLikelyCase,
+			WorstCase:      es.WorstCase,
+		}
+
+		if err := store.AddEstimate(c.Params("token"), est); err != nil {
+			data := ErrorResponse{
+				Message: "error",
+				Reason:  err.Error(),
+			}
+			return c.Status(500).JSON(data)
+		}
+
+		data := GeneralResponse{
+			Message: "ok",
+		}
+		return c.Status(200).JSON(data)
+	})
+}
+
+// Adding the Remove user estimate from session route
+// @Summary Remove the estimate of a user for a work package
+// @Description Removes a estimate of a existing user of a existing work package inside a existing session
+// @Tags estimate
+// @Produce  json
+// @Param token path string true "Session Token"
+// @Param  user path string true "User Name"
+// @Param  id path string true "Work Package ID"
+// @Success 200 {object} GeneralResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /sessions/{token}/estimates/{user}/{id} [delete]
+func addRemoveUserEstimateFromSessionRoute(api fiber.Router, store datastore.DataStore) {
+	api.Delete("/sessions/:token/estimates/:user/:id", func(c *fiber.Ctx) error {
+
+		est := datastore.Estimate{
+			WorkPackageID: c.Params("id"),
+			UserName:      c.Params("user"),
+		}
+
+		if err := store.RemoveEstimate(c.Params("token"), est); err != nil {
+			data := ErrorResponse{
+				Message: "error",
+				Reason:  err.Error(),
+			}
+			return c.Status(500).JSON(data)
+		}
+
+		data := GeneralResponse{
+			Message: "ok",
+		}
+		return c.Status(200).JSON(data)
+	})
+}
+
+// Adding the Get user estimates from session route
+// @Summary Get the estimates of all users for all work packages
+// @Description Gets all estimates of all existing users of all existing work packages inside a existing session
+// @Tags estimate
+// @Produce  json
+// @Param token path string true "Session Token"
+// @Success 200 {object} PerUserEstimateResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /sessions/{token}/estimates [get]
+func addGetUserEstimatesFromSessionRoute(api fiber.Router, store datastore.DataStore) {
+	api.Get("/sessions/:token/estimates", func(c *fiber.Ctx) error {
+
+		ests, e := store.GetEstimates(c.Params("token"))
+
+		if e != nil {
+			data := ErrorResponse{
+				Message: "error",
+				Reason:  e.Error(),
+			}
+			return c.Status(500).JSON(data)
+		}
+
+		data := PerUserEstimateResponse{
+			Message:   "ok",
+			Estimates: ests,
 		}
 		return c.Status(200).JSON(data)
 	})
